@@ -32,6 +32,7 @@ Bugs fixed in 3.23.1
 the application to be opened again.
 [3062769] Groups list in Add/Edit dialog box no longer "remembers"
 groups from previously opened database.
+[3058043] Hexadecimal password policy now correctly saved.
 [] Spanish translations for installer and application updated - thanks
 to Jose.
 
